--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,17 @@
 Короче
 {% endblock %}
 
+
 {% block body %}
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="alert alert-warning" role="alert">
+        {% for message in messages %}
+            {{ message }}<br>
+        {% endfor %}
+    </div>
+    {% endif %}
+{% endwith %}
 <div class="container">
 <div class="px-4 py-5 my-5 text-center">
     <h1 class="display-5 fw-bold text-body-emphasis">Короче URL</h1>
@@ -14,7 +24,7 @@
             <div class="row mb-3 text-center">
                     <input type="text" class="col-md-8 themed-grid-col" name="full_url" id="full_url" placeholder="Введите Url-ссылку">
                 <div class="col-md-4 themed-grid-col">
-                    <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Короче</button>
+                    <button type="submit" class="btn btn-primary btn-lg px-4">Короче</button>
                 </div>
             </div>
         </form>
