--- a/templates/short_url.html
+++ b/templates/short_url.html
@@ -4,6 +4,7 @@
 Ваш Url
 {% endblock %}
 
+
 {% block body %}
 <div class="container">
 <table class="table table-bordered">
@@ -12,11 +13,11 @@
         <th>short Url</th>
         <th>date</th>
     </tr></thead>
-    {% for el in article %}
+    {% for el in res %}
     <tbody><tr>
-        <td>{{ el.full_url }}</td>
-        <td><a href={{request.url_root}}{{ el.short_url }}>{{ el.short_url }}</a></td>
-        <td>{{ el.date }}</td>
+        <td>{{ el.Article.full_url }}</td>
+        <td><a href={{request.url_root}}{{ el.Article.short_url }}>{{ el.Article.short_url }}</a></td>
+        <td>{{ el.Article.date }}</td>
     </tr>
     {% endfor %}
     </tbody>
